# StaticLambda

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
example/: main.cpp
include/StaticLambda/: StaticLambda.hpp
src/: StaticLambda.cpp
